# voxelmapping

./: .dockerignore  .gitignore  CMakeLists.txt  DianaApiLog.txt  Dockerfile  README.md  diagnose_transforms.py  docker-compose.yml  interactive_capture_mecheye.py  interactive_capture_mecheye_test.py  mecheye_robot_multipose_capture.py  poses_example.json  test.py  visualize_voxelmap.py  visualize_voxelmap_simple.py
captures/: camera_poses_in_base.json  capture_index.json  extrinsics_used.json
debugging/: debug_capture_suite.py  debug_handeye_chain.py  diana_move_and_dirs.py  interactive_capture_mecheye_test.py
include/: VoxelMapping.h
python/: voxel_mapping_consumer.py
src/: VoxelMapping.cpp  bindings.cpp
tests/: CMakeLists.txt  test_voxel_mapping.py  visualize_voxel_map.py
